--- a/ndcube/asdf/resources/schemas/ndcube_sequence-1.0.0.yaml
+++ b/ndcube/asdf/resources/schemas/ndcube_sequence-1.0.0.yaml
@@ -15,7 +15,7 @@ properties:
     type: array
     items:
       anyOf:
-        - tag: "tag:sunpy.org:ndcube/ndcube/ndcube-1.*"
+        - tag: "tag:sunpy.org:ndcube/ndcube-1.*"
           # Allow any other objects here as we don't want to restrict what people can save
         - type: object
   meta:
